--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ button {
 .hidden {
   display: none;
 }
+
+button {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  background: #222;
+  color: #fff;
+  border: 1px solid #444;
+}
+
+button:hover {
+  background: #333;
+}
